--- a/nbproject/private/private.properties
+++ b/nbproject/private/private.properties
@@ -3,4 +3,4 @@ do.depend=false
 do.jar=true
 javac.debug=true
 javadoc.preview=true
-user.properties.file=C:\\Users\\Stefano\\AppData\\Roaming\\NetBeans\\7.2.1\\build.properties
+user.properties.file=C:\\Users\\fratuz610\\AppData\\Roaming\\NetBeans\\7.2\\build.properties
